# text-processing-tools

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a15a2b56c651_initial_corpora.py
app/: config.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/frontend/: .env  package-lock.json  package.json  vue.config.js
app/frontend/src/: App.vue  main.js
app/routers/: corpora.py
app/schemas/: corpora.py
backend/: crud.py  exceptions.py  main.py  schemas.py
backend/routers/: corpora.py
frontend/: .env  package-lock.json  package.json
frontend/src/components/layout/: TheNavigationDrawer.vue
frontend/src/components/modals/: AddCorpus.vue  EditCorpus.vue
frontend/src/components/ui/: ListItemAction.vue  ListItemContent.vue
frontend/src/plugins/: vuetify.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue
text_processing_tools/: __init__.py  config.py  main.py  tags.py
text_processing_tools/api/: __init__.py  exceptions.py  main.py
text_processing_tools/api/routers/: __init__.py  corpora.py
text_processing_tools/api/schemas/: __init__.py  corpora.py
text_processing_tools/database/: __init__.py  connections.py
text_processing_tools/frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
text_processing_tools/frontend/layouts/: default.vue
text_processing_tools/frontend/pages/: index.vue
text_processing_tools/frontend/plugins/: vuetify.ts
text_processing_tools/models/: __init__.py  core.py  corpora.py
(+8 files in other folders)
